@@ -70,7 +70,7 @@ public class User implements UserDetails{
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(() -> "ROLE_" + rol.name());
     }
 
     @Override
